# SOC-Storyteller

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_demo.py
correlation/: correlation_engine.py
detections/: base.py  rules.py
mitre/: attack_mapping.py
parser/: event_id_registry.py  evtx_parser.py
reports/: narrative_generator.py  recommendations.py  report_generator.py
risk_engine/: risk_calculator.py
sample_logs/: attack_scenario.xml  generate_sample_data.py
tests/: conftest.py  test_correlation.py  test_detections.py  test_integration.py  test_main_cli.py  test_mitre.py  test_models.py  test_parser.py  test_reports.py  test_risk_engine.py  test_timeline.py  test_utils.py
timeline/: timeline_builder.py
ui/: streamlit_app.py
utils/: exceptions.py  logger.py  models.py
